--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Shumon's </span>World!!!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit, nobis dicta veniam tenetur
+                sequi
+                beatae rem perferendis voluptatem nostrum! Nihil alias laudantium nesciunt porro veniam dolore quis
+                repellat
+                tempore cupiditate!
+            </p>
+            <a target="_blank" href="https://www.linkedin.com/in/shumon-uddin-201b9083/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="/images/j_pic.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
