--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Shumon's </span>World!!!</h1>
@@ -26,7 +26,7 @@
                 repellat
                 tempore cupiditate!
             </p>
-            <a target="_blank" href="https://www.linkedin.com/in/shumon-uddin-201b9083/">HIRE ME</a>
+            <a class="btn-hireme" target="_blank" href="https://www.linkedin.com/in/shumon-uddin-201b9083/">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="/images/j_pic.png" alt="">
