--- a/index.html
+++ b/index.html
@@ -26,10 +26,24 @@
                 repellat
                 tempore cupiditate!
             </p>
-            <a class="btn-hireme" target="_blank" href="https://www.linkedin.com/in/shumon-uddin-201b9083/">HIRE ME</a>
+            <a class="linked-button" target="_blank" href="https://www.linkedin.com/in/shumon-uddin-201b9083/">HIRE
+                ME</a>
         </div>
         <div class="half-width">
             <img src="/images/j_pic.png" alt="">
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="/images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum repudiandae dolor maiores id molestias
+                sed deserunt, sunt beatae alias! Minus qui sunt error facere ab maiores ullam repellat mollitia
+                deleniti!</p>
+            <a class="linked-button" target="_blank" href="https://www.google.com/">DOWNLOAD RESUME</a>
         </div>
     </section>
 </body>
