--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Shumon's </span>World!!!</h1>
@@ -33,7 +33,7 @@
             <img src="/images/j_pic.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="/images/jhankar2.png" alt="">
         </div>
@@ -46,6 +46,27 @@
             <a class="linked-button" target="_blank" href="https://www.google.com/">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack" class="experience-item">
+                <h1>Full Stack Web Developer</h1>
+                <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, laboriosam et obcaecati delectus
+                    asperiores totam assumenda eum pariatur facere aut. Dolorum nulla obcaecati ipsa ea! Molestias, odit
+                    dicta. Cum, aperiam.</p>
+            </div>
+            <div id="baby-dev" class="experience-item">
+                <h1>Baby Web Developer</h1>
+                <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, laboriosam et obcaecati delectus
+                    asperiores totam assumenda eum pariatur facere aut. Dolorum nulla obcaecati ipsa ea! Molestias, odit
+                    dicta. Cum, aperiam.</p>
+            </div>
+        </div>
+    </section>
 </body>
-
+<footer>
+    <p>&copy; Shumon 2023, All rights reserved</p>
+</footer>
 </html>
