--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 ME</a>
         </div>
         <div class="half-width">
-            <img src="/images/j_pic.png" alt="">
+            <img src="images/j_pic.png" alt="">
         </div>
     </section>
     <section class="dream-big flexible-container">
         <div class="half-width">
-            <img src="/images/jhankar2.png" alt="">
+            <img src="images/jhankar2.png" alt="">
         </div>
         <div class="half-width">
             <h1>Dream Big</h1>
@@ -69,4 +69,5 @@
 <footer>
     <p>&copy; Shumon 2023, All rights reserved</p>
 </footer>
+
 </html>
